# Claude-Conductor

./: .gitignore  GEMINI.md  README.md  _claude_runner.py  _claude_task.ps1  _dispatch_prompt_phase2.txt  pyproject.toml  session_test.txt  test_working.txt
.claude/: steering.md
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  STRUCT.md
src/: __init__.py  _gui_test.py  assimilator_runner.py  gui_viewer.py  server.py  twophasespecdispatch.py
src/assimilator/: __init__.py  core.py  manifest.py
src/assimilator/analyzers/: __init__.py  base.py  git_analyzer.py  python_analyzer.py  structure_analyzer.py
src/assimilator/extractors/: __init__.py  base.py  imports.py  patterns.py  symbols.py
src/assimilator/output/: __init__.py  cache.py  formatter.py
src/dispatch/: __init__.py  handler.py
src/git/: __init__.py  commit_message.py  contracts.py  operations.py  workflow.py
src/gui/: formatters.py  session.py  theme.py  viewer.py
src/mapper/: __init__.py  detector.py  git_info.py  mapper.py  parser.py
src/output/: __init__.py  masker.py
src/pipelines/: __init__.py  auto_docs.py  config.py  runner.py
src/specs/: __init__.py  contracts.py  parser.py  prompts.py  runner.py  validator.py
src/tasks/: __init__.py  contracts.py  tracker.py
tests/: test_gemini_parsing.py  test_godotgutsupport.py  test_healthcheck.py  test_singlephasespecexecution.py  test_stringreverser.py  test_twophasespecdispatch.py
tests/output/: test_masker.py
tests/specs/: __init__.py  test_validator.py
