[project]
name = "claude-code-bridge"
version = "1.0.0"
description = "MCP server bridging Claude Desktop to Claude Code CLI"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "PySide6>=6.6.0"
]

[project.scripts]
claude-code-bridge = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
